# AIAGENTS

email_autoresponder/: README.md  credentials.json  gen.py  pyproject.toml
email_autoresponder/src/: reqs.txt
email_autoresponder/src/autoresponder/: crew.py  main.py
email_autoresponder/src/autoresponder/config/: agents.yaml  tasks.yaml
email_autoresponder/src/autoresponder/laptoper/: README.md  laptop_recommendations.md  pyproject.toml
email_autoresponder/src/autoresponder/laptoper/config/: agents.yaml  tasks.yaml
email_autoresponder/src/autoresponder/laptoper/src/laptoper/: crew.py  main.py
email_autoresponder/src/autoresponder/laptoper/src/laptoper/tools/: __init__.py  custom_tool.py
email_autoresponder/src/autoresponder/tools/: gmail_tool.py
laptoper/: .gitignore  README.md  pyproject.toml
laptoper/config/: agents.yaml  tasks.yaml
laptoper/src/laptoper/: crew.py  main.py
laptoper/src/laptoper/tools/: __init__.py  custom_tool.py
