[project]
name = "email_autoresponder"
version = "0.1.0"
description = "email_autoresponder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
email_autoresponder = "email_autoresponder.main:run"
run_crew = "email_autoresponder.main:run"
train = "email_autoresponder.main:train"
replay = "email_autoresponder.main:replay"
test = "email_autoresponder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
