[project]
name = "laptoper"
version = "0.1.0"
description = "laptoper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
laptoper = "laptoper.main:run"
run_crew = "laptoper.main:run"
train = "laptoper.main:train"
replay = "laptoper.main:replay"
test = "laptoper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
